2006-12-13  Akim Demaille  <akim.demaille@free.fr>

	More concrete tokens
	* src/parser/bison/ugrammar.y: here.

2006-12-13  Akim Demaille  <akim.demaille@free.fr>

	Add tests for load
	* src/console.cc: Support URBI_PATH.
	* src/userver.cc (loadFile): Reduce scopes.
	* tests/Makefile.am (TEST_ENVIRONMENT): New.
	* tests/check-file: Also accept XXXXXXX "prompts".
	Pass URBI_PATH to find files to load.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Remove UCommand_LOAD
	* src/ucommand.cc, src/ucommand.hh: It has been obsoleted by the
	previous patch.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Merge load into exec
	* src/uexpression.cc: Merge the handling of load into that of exec.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	UServer::path
	* src/userver.cc, src/userver.hh (path_type, path, find_file):
	New.
	(loadFile): No longer pure virtual, provide an effective default
	version.
	* src/console.cc (loadFile): Remove, this version is now in the
	kernel.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	include fstream
	* src/parser/uparser.cc: here.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Add file parsing
	* src/parser/uparser.cc, src/parser/uparser.hh (parse_): New.
	(process): Use it.
	Add an overloaded version meant to parse file, not a loaded buffer.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	UParsers know their UConnection
	* src/parser/uparser.cc, src/parser/uparser.hh (UParser::connection):
	New.
	(UParser::UParser, UParser::process): Adjust.
	* src/ucommand.cc, src/uexpression.cc, src/userver.cc: Adjust.
	* src/uconnection.cc, src/uconnection.hh: Pass the connection
	to the parser ctor.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/ucommand.hh, src/userver.cc: here.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	White space changes
	* src/ucommand.cc: here.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	UDEBUG_EXPR
	* src/uexpression.cc: New.
	(UExpression::print): Use it.